--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -13,7 +13,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^5.8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0"
     },
@@ -38,6 +38,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/Helpers/general_helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
